--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "babylonjs": "^5.51.0",
+    "html2canvas": "^1.4.1",
     "mapbox-gl": "^2.13.0",
     "react": "^18.2.0",
+    "react-babylonjs": "^3.1.15",
     "react-dom": "^18.2.0",
     "react-map-gl": "^7.0.21",
     "react-scripts": "5.0.1",
